fixing nav bar link to readable

--- a/webproject/style/style.css
+++ b/webproject/style/style.css
@@ -74,7 +74,6 @@ body {
 .main-nav a {
     color: var(--color-text-secondary);
     text-decoration: none;
-    text-shadow: 0px 2px 10px #081beb;
     font-size: 1rem;
     transition: color 0.2s;
 }
@@ -170,6 +169,20 @@ body {
     );
     z-index: 1; 
 }
+
+.hero-carousel .swiper-slide::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, 
+      rgba(0, 0, 0, 0.7) 0%, 
+      rgba(0, 0, 0, 0) 100%
+    );
+    z-index: 1; 
+  }
 
 .hero-text-content {
     position: relative;
